--- a/blog.html
+++ b/blog.html
@@ -429,8 +429,8 @@ he earth it first without heaven in place seed it second morning saying.</p>
 <img data-cfsrc="img/TouristLogo.png" alt style="display:none;visibility:hidden;"><noscript><img src="img/TouristLogo.png" alt></noscript>
 </a>
 </div>
-<p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-<a href="#">+10 367 826 2567</a> <br>
+<p>2, Sai Charan,Gujarat <br> India <br>
+<a href="#">917854632810</a> <br>
 <a href="#"><span class="__cf_email__" data-cfemail="e2818d8c96838196a281839092878c968790cc818d8f">[email&#160;protected]</span></a>
 </p>
 <div class="socail_links">
