--- a/destination_details.html
+++ b/destination_details.html
@@ -76,7 +76,7 @@ window.__mirage2 = {petok:"d332294f8cd1c8388df4dd39ba1e92cf26b0f1af-1614013487-1
 <div class="col-xl-4 col-lg-4 d-none d-lg-block">
 <div class="social_wrap d-flex align-items-center justify-content-end">
 <div class="number">
-<p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
+<p> <i class="fa fa-phone"></i> 917854632810</p>
 </div>
 <div class="social_links d-none d-xl-block">
 <ul>
@@ -299,8 +299,8 @@ new places to discover.</p>
 <img data-cfsrc="img/TouristLogo.png" alt style="display:none;visibility:hidden;"><noscript><img src="img/TouristLogo.png" alt></noscript>
 </a>
 </div>
-<p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-<a href="#">+10 367 826 2567</a> <br>
+<p>2, Sai Charan, <br> India <br>
+<a href="#">917854632810</a> <br>
 <a href="#"><span class="__cf_email__" data-cfemail="53303c3d273230271330322123363d2736217d303c3e">[email&#160;protected]</span></a>
 </p>
 <div class="socail_links">
