--- a/travel_destination.html
+++ b/travel_destination.html
@@ -70,8 +70,7 @@
                                             <li id="liLogout" class='invisible' style='cursor:pointer'>
                                                 <a id="btnLogout">Logout</a>
                                             </li>
-                                            <li><a class href="travel_destination.html">Destination</a>
-                                            </li>
+                                            
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
@@ -83,12 +82,12 @@
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
                                                     alt="" id="dpPhoto" draggable="false"></li>
                                             </li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>
+                                            </li> -->
                                             <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">blog</a></li>
@@ -103,7 +102,7 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
+                                        <p> <i class="fa fa-phone"></i> 917854632810</p>
                                     </div>
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
@@ -137,7 +136,7 @@
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
                         <h3>Destinations</h3>
-                        <p>Pixel perfect design with awesome contents</p>
+                        
                     </div>
                 </div>
             </div>
