--- a/about.html
+++ b/about.html
@@ -81,14 +81,13 @@
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
                                                     alt="" id="dpPhoto" draggable="false"></li>
-                                            <li><a class href="travel_destination.html">Destination</a>
-                                            </li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            
+                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>
+                                            </li> -->
                                             <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">blog</a></li>
@@ -137,7 +136,7 @@
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
                         <h3>About Us</h3>
-                        <p>Pixel perfect design with awesome contents</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -191,19 +190,19 @@
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4">
                                         <div class="single_counter text-center">
-                                            <h3 class="counter">378</h3>
+                                            <h3 class="counter">0</h3>
                                             <p>Tour has done successfully</p>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-4">
                                         <div class="single_counter text-center">
-                                            <h3 class="counter">30</h3>
+                                            <h3 class="counter">0</h3>
                                             <p>Yearly tour arrange</p>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-4">
                                         <div class="single_counter text-center">
-                                            <h3 class="counter">2263</h3>
+                                            <h3 class="counter">0</h3>
                                             <p>Happy Clients</p>
                                         </div>
                                     </div>
@@ -240,7 +239,7 @@
                             <img src="img/svg_icon/1.svg" alt>
                         </div>
                         <h3>Comfortable Journey</h3>
-                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>Travel Before youn run out of time.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -249,7 +248,7 @@
                             <img src="img/svg_icon/2.svg" alt>
                         </div>
                         <h3>Luxuries Hotel</h3>
-                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>Once a year Go Someplace you've never been before.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -258,7 +257,7 @@
                             <img src="img/svg_icon/3.svg" alt>
                         </div>
                         <h3>Travel Guide</h3>
-                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>Travel the best way to be lost and found all at the same time.</p>
                     </div>
                 </div>
             </div>
@@ -407,8 +406,8 @@
                                             alt></noscript>
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
+                            <p>2, Sai charan, Gujarat <br> India <br>
+                                <a href="#">917854632810</a> <br>
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="2e4d41405a4f4d5a6e4d4f5c5e4b405a4b5c004d4143">[email&#160;protected]</span></a>
                             </p>
