--- a/index.html
+++ b/index.html
@@ -24,6 +24,36 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css">
+    <!-- Third party plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap)-->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+    <!-- SweetAlert 2 Files -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        .invisible {
+            display: none !important;
+            visibility: hidden !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -40,12 +70,16 @@
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
                                     <a href>
+                                        <script type="text/javascript" style="display:none">
+                                            //<![CDATA[
+                                            window.__mirage2 = { petok: "d332294f8cd1c8388df4dd39ba1e92cf26b0f1af-1614013487-1800" };
+//]]>
+                                        </script>
                                         <script type="text/javascript"
                                             src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-                                        <img data-cfsrc="img/TouristLogo.png" style="display:none;visibility:hidden;">
-                                        <noscript>
-                                            <img src="img/TouristLogo.png" alt>
-                                        </noscript>
+                                        <img data-cfsrc="img/TouristLogo.png" alt
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/TouristLogo.png" alt></noscript>
                                     </a>
                                 </div>
                             </div>
@@ -55,30 +89,18 @@
                                         <ul id="navigation">
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a></li>
-                                            <li id="guidelogin" class='invisible'>
-                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                                    Guide Login
-                                                </a>
-                                            </li>
-                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                                <a id="btnLogout">Logout</a>
-                                            </li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
+                                                    alt="" id="dpPhoto" draggable="false"></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>
-                                            <input type="hidden" id="hdnUserType">
-                                            <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
-                                                    alt="" id="dpPhoto" draggable="false"></li>
-                                            <!-- #### LogIn FormatMenu STOP #### -->
-
+                                            </li> -->
                                             <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">blog</a></li>
@@ -119,6 +141,8 @@
             </div>
         </div>
     </header>
+
+
 
     <div class="slider_area">
         <div class="slider_active owl-carousel">
@@ -786,44 +810,43 @@
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/1.png" alt
-                                            style="display:none;visibility:hidden;"><noscript>
-                                            <img src="img/instagram/1.png" alt>
-                                        </noscript>
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/instagram/1.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/2.png" alt
-                                            style="display:none;visibility:hidden;"><noscript>
-                                            <img src="img/instagram/2.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/instagram/2.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/3.png" alt
-                                            style="display:none;visibility:hidden;"><noscript>
-                                            <img src="img/instagram/3.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/instagram/3.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/4.png" alt
-                                            style="display:none;visibility:hidden;"><noscript>
-                                            <img src="img/instagram/4.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/instagram/4.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/5.png" alt
-                                            style="display:none;visibility:hidden;"><noscript>
-                                            <img src="img/instagram/5.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/instagram/5.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/6.png" alt
-                                            style="display:none;visibility:hidden;"><noscript>
-                                            <img src="img/instagram/6.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript><img
+                                                src="img/instagram/6.png" alt></noscript>
                                     </a>
                                 </div>
                             </div>
@@ -910,39 +933,7 @@
 
         gtag('config', 'UA-23581568-13');
     </script>
-
-
-
-    <!-- #### COPY THIS SCRIPTS START #### -->
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-        rel="stylesheet" type="text/css">
-    <!-- Third party plugin CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
- https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
-    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
-    <!-- SweetAlert 2 Files -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
-    <style>
-        .invisible {
-            display: none !important;
-            visibility: hidden !important;
-        }
-    </style>
     <script src="js/indexMain.js"></script>
-
-    <!-- #### COPY THIS SCRIPTS END #### -->
 </body>
 
 </html>
