--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a></li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                                    onclick="login()">Login</a></li>
                                             <li id="guidelogin" class='invisible'>
                                                 <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
                                                     Guide Login
@@ -65,7 +66,8 @@
                                             <li id="liLogout" class='invisible' style='cursor:pointer'>
                                                 <a id="btnLogout">Logout</a>
                                             </li>
-                                            <li><a class href="travel_destination.html">Destination</a>
+                                            <li>
+                                                <a class href="travel_destination.html">Destination</a>
                                             </li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
