Changes by Mahesh

--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
                                         <ul id="navigation">
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
-<<<<<<< HEAD
                                             <!-- #### LogIn FormatMenu START #### -->
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'>
+                                                <img alt="Profile" id="dpPhoto">
+                                            </li>
                                             <li id="login"><a style='cursor:pointer' id="btnLogin"
                                                     onclick="login()">Login</a></li>
                                             <li id="guidelogin" class='invisible'>
@@ -101,15 +104,9 @@
                                             <li id="liLogout" class='invisible' style='cursor:pointer'>
                                                 <a id="btnLogout">Logout</a>
                                             </li>
+                                            <!-- #### LogIn FormatMenu STOP #### -->
                                             <li>
                                                 <a class href="travel_destination.html">Destination</a>
-=======
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
-                                            <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
-                                                    alt="" id="dpPhoto" draggable="false"></li>
-                                            <li><a class href="travel_destination.html">Destination</a>
->>>>>>> 42f333e82dc59495277c297c4e8e73e10a7b887f
                                             </li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
