--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
-                                                <img alt="Profile" id="dpPhoto">
+                                                <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                             </li>
                                             <li id="login"><a style='cursor:pointer' id="btnLogin"
                                                     onclick="login()">Login</a></li>
