--- a/about.html
+++ b/about.html
@@ -60,15 +60,22 @@
                                         <ul id="navigation">
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a></li>
-                                            <li id="guidelogin" class='invisible'>
-                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                                    Guide Login
-                                                </a>
-                                            </li>
-                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                                <a id="btnLogout">Logout</a>
-                                            </li>
+                                           <!-- #### LogIn FormatMenu START #### -->
+                                           <li id="Username" class='invisible'></li>
+                                           <li id="Photo" class='invisible'>
+                                               <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                                           </li>
+                                           <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                                   onclick="login()">Login</a></li>
+                                           <li id="guidelogin" class='invisible'>
+                                               <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                                   Guide Login
+                                               </a>
+                                           </li>
+                                           <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                               <a id="btnLogout">Logout</a>
+                                           </li>
+                                           <!-- #### LogIn FormatMenu STOP #### -->
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
@@ -88,12 +95,6 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li> -->
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
