--- a/BookTrip.html
+++ b/BookTrip.html
@@ -109,23 +109,7 @@
                                         <ul id="navigation">
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'>
-                                                <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                            </li>
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                                    onclick="login()">Login</a></li>
-                                            <li id="guidelogin" class='invisible'>
-                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                                    Guide Login
-                                                </a>
-                                            </li>
-                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                                <a id="btnLogout">Logout</a>
-                                            </li>
-                                            <input type="hidden" id="hdnUserType">
-                                            <!-- #### LogIn FormatMenu STOP #### -->
+                                           
                                             <li>
                                                 <a class href="travel_destination.html">Destination</a>
                                             </li>
@@ -134,23 +118,33 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->
-                                            <li><a href="contact.html">Contact</a></li>
+                                            </li> -->                                           
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
+                             <!-- #### LogIn FormatMenu START #### -->
+                             <li id="Username" class='invisible'></li>
+                             <li id="Photo" class='invisible'>
+                                 <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                             </li>
+                             <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                     onclick="login()">Login</a></li>
+                             <li id="guidelogin" class='invisible'>
+                                 <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                     Guide Login
+                                 </a>
+                             </li>
+                             <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                 <a id="btnLogout">Logout</a>
+                             </li>
+                             <input type="hidden" id="hdnUserType">
+                             <!-- #### LogIn FormatMenu STOP #### -->
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
-                                <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 917854632810</p>
-                                    </div>
+                                <div class="social_wrap d-flex align-items-center justify-content-end">                                   
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -410,7 +404,7 @@
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="05666a6b716466714566647775606b7160772b666a68">[email&#160;protected]</span></a>
                             </p>
-                            <div class="socail_links">
+                            <!-- <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -438,7 +432,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -446,11 +440,8 @@
                             <h3 class="footer_title">
                                 Company
                             </h3>
-                            <ul class="links">
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#"> Gallery</a></li>
-                                <li><a href="#"> Contact</a></li>
+                            <ul class="links">                                
+                                <li><a href="#">About</a></li>                                
                             </ul>
                         </div>
                     </div>
