--- a/elements.html
+++ b/elements.html
@@ -56,6 +56,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
+                                            <li><a href="index.html">home</a></li>    
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a>
@@ -65,23 +66,16 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>                                           
-                                            <li><a href="contact.html">Contact</a></li>
+                                            </li>                                                                                       
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
-                                <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
-                                    </div>
+                                <div class="social_wrap d-flex align-items-center justify-content-end">                                    
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
+                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>                                           
                                         </ul>
                                     </div>
                                 </div>
@@ -795,7 +789,7 @@
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="4b2824253f2a283f0b282a393b2e253f2e3965282426">[email&#160;protected]</span></a>
                             </p>
-                            <div class="socail_links">
+                            <!-- <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -823,7 +817,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -832,10 +826,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">Pricing</a></li>
                                 <li><a href="#">About</a></li>
-                                <li><a href="#"> Gallery</a></li>
-                                <li><a href="#"> Contact</a></li>
                             </ul>
                         </div>
                     </div>
