--- a/uploadLocation.html
+++ b/uploadLocation.html
@@ -151,23 +151,16 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->                                           
-                                            <li><a href="contact.html">Contact</a></li>
+                                            </li> -->                                                                                      
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 917854632810</p>
-                                    </div>
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -200,13 +193,13 @@
                 <div class="col-lg-4 col-md-6">
                     <input type="hidden" name="id">
                     <div class="form-group">
-                        <label class="control-label">Menu Name</label>
+                        <label class="control-label">Location Name</label>
                         <input type="text" class="form-control" name="name" placeholder="Menu" id='txtMenu'>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="form-group">
-                        <label class="control-label">Menu Description</label>
+                        <label class="control-label">Place Description</label>
                         <textarea cols="30" rows="3" class="form-control" name="description" id='txtDesc'></textarea>
                     </div>
                 </div>
@@ -269,7 +262,7 @@
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="05666a6b716466714566647775606b7160772b666a68">[email&#160;protected]</span></a>
                             </p>
-                            <div class="socail_links">
+                            <!-- <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -297,7 +290,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -306,10 +299,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">Pricing</a></li>
                                 <li><a href="#">About</a></li>
-                                <li><a href="#"> Gallery</a></li>
-                                <li><a href="#"> Contact</a></li>
                             </ul>
                         </div>
                     </div>
