--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -58,6 +58,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
+                                            <li><a href="index.html">home</a></li>    
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
 
@@ -85,23 +86,17 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>                                        
-                                            <li><a href="contact.html">Contact</a></li> -->
+                                            </li>                                                                                    
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 917854632810</p>
-                                    </div>
+                                  
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
