--- a/travel_destination.html
+++ b/travel_destination.html
@@ -58,25 +58,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href>home</a></li>
-                                            <li><a href="about.html">About</a></li>
-                                          <!-- #### LogIn FormatMenu START #### -->
-                                          <li id="Username" class='invisible'></li>
-                                          <li id="Photo" class='invisible'>
-                                              <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                          </li>
-                                          <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                                  onclick="login()">Login</a></li>
-                                          <li id="guidelogin" class='invisible'>
-                                              <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                                  Guide Login
-                                              </a>
-                                          </li>
-                                          <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                              <a id="btnLogout">Logout</a>
-                                          </li>
-                                          <!-- #### LogIn FormatMenu STOP #### -->
-                                            
+                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="about.html">About</a></li>  
+                                            <li><a class href="travel_destination.html">Destination</a>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
@@ -93,23 +77,32 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->                                        
-                                            <li><a href="contact.html">Contact</a></li>
+                                            </li> -->                                                                                    
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 917854632810</p>
-                                    </div>
+                                   <!-- #### LogIn FormatMenu START #### -->
+                                   <li id="Username" class='invisible'></li>
+                                   <li id="Photo" class='invisible'>
+                                       <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                                   </li>
+                                   <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                           onclick="login()">Login</a></li>
+                                   <li id="guidelogin" class='invisible'>
+                                       <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                           Guide Login
+                                       </a>
+                                   </li>
+                                   <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                       <a id="btnLogout">Logout</a>
+                                   </li>
+                                   <!-- #### LogIn FormatMenu STOP #### -->
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
+                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>                                           
                                         </ul>
                                     </div>
                                 </div>
@@ -534,7 +527,7 @@
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="d6b5b9b8a2b7b5a296b5b7a4a6b3b8a2b3a4f8b5b9bb">[email&#160;protected]</span></a>
                             </p>
-                            <div class="socail_links">
+                            <!-- <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -562,7 +555,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -570,11 +563,8 @@
                             <h3 class="footer_title">
                                 Company
                             </h3>
-                            <ul class="links">
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#"> Gallery</a></li>
-                                <li><a href="#"> Contact</a></li>
+                            <ul class="links">                                
+                                <li><a href="#">About</a></li>                                
                             </ul>
                         </div>
                     </div>
