Changes done for Guide Added Mobile Login

--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -58,7 +58,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>    
+                                            <li><a href="index.html">home</a></li>
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
 
@@ -86,14 +86,14 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>                                                                                    
+                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-                                  
+
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
@@ -119,39 +119,51 @@
     <div class='row' id='mainRow'>
         <div class="col-sm-12 col-lg-12 col-md-12">
             <div id="mainForm" class="container">
+
                 <div class='row'>
-                    <div class="col-sm-12 col-lg-12 col-md-12">
+                    <div class="col-sm-12 col-lg-6 col-md-6">
+                        <div class="mt-10">
+                            <input type="text" id="txtGuideName" class="single-input" placeholder="Guide Name">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-6 col-md-6">
+                        <div class="mt-10">
+                            <input type="text" id="txtGuideEmail" class="single-input" placeholder="Guide Email">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row'>
+                    <div class="col-sm-12 col-lg-6 col-md-6">
                         <div class="mt-10">
                             <input type="text" id="txtAgencyName" class="single-input" placeholder="Agency Name">
                         </div>
                     </div>
-                </div>
-                <div class='row'>
-                    <div class="col-sm-12 col-lg-12 col-md-12">
+                    <div class="col-sm-12 col-lg-6 col-md-6">
                         <div class="mt-10">
                             <input type="text" id="txtContact" class="single-input" placeholder="Contact">
-
                         </div>
                     </div>
                 </div>
+
+
                 <div class='row'>
                     <div class="col-sm-12 col-lg-12 col-md-12">
                         <div class="mt-10">
-                            <input type="text" id="txtAddress" class="single-input" placeholder="Address">
+                            <textarea type="text" id="txtAddress" class="single-input" placeholder="Address"></textarea>
                         </div>
                     </div>
                 </div>
+                
                 <div class='row'>
-                    <div class="col-sm-12 col-lg-12 col-md-12">
+                    <div class="col-sm-12 col-lg-6 col-md-6">
                         <div class="mt-10">
                             <input type="text" id="txtServiceLocation" class="single-input"
                                 placeholder="Service Location">
                         </div>
                     </div>
-                </div>
-
-                <div class='row'>
-                    <div class="col-sm-12 col-lg-12 col-md-12">
+                    <div class="col-sm-12 col-lg-6 col-md-6">
                         <div class="mt-10">
                             <input type="text" id="txtbaseLocation" class="single-input"
                                 placeholder="Base Operation Location">
