--- a/destination_details.html
+++ b/destination_details.html
@@ -80,10 +80,10 @@
                                         <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                     </li>
                                     <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                            onclick="login()">Login</a></li>
+                                            onclick="login()">Login &nbsp;</a></li>
                                     <li id="guidelogin" class='invisible'>
                                         <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                            Guide Login
+                                             Guide Login
                                         </a>
                                     </li>
                                     <li id="liLogout" class='invisible' style='cursor:pointer'>
