--- a/travel_destination.html
+++ b/travel_destination.html
@@ -90,7 +90,7 @@
                                        <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                    </li>
                                    <li id="login"><a style='cursor:pointer' id="btnLogin"
-                                           onclick="login()">Login</a></li>
+                                           onclick="login()">Login &nbsp;</a></li>
                                    <li id="guidelogin" class='invisible'>
                                        <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
                                            Guide Login
