Changes Done by nandu

--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -24,7 +24,6 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -155,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class='row'>
                     <div class="col-sm-12 col-lg-6 col-md-6">
                         <div class="mt-10">
@@ -364,6 +363,7 @@
             </div>
         </div>
     </div>
+    <div id="loading"></div>
 
 
 
