--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                                     <li id="Photo" class='invisible'>
                                         <img alt="Profile" height="35px" width='35px' id="dpPhoto">
                                     </li>
-                                    <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login &nbsp;&nbsp;</a>
+                                    <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login
+                                            &nbsp;&nbsp;</a>
                                     </li>
                                     <li id="guidelogin" class='invisible'>
                                         <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
