--- a/travel_destination.html
+++ b/travel_destination.html
@@ -67,6 +67,7 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
+                                            <li><a href="emergency_services.html">Emergency Service</a></li>
                                             <input type="hidden" id="hdnUserType">
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
