--- a/destination_details.html
+++ b/destination_details.html
@@ -67,7 +67,8 @@
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li>                                                                                       
+                                            </li> 
+                                            <li><a href="emergency_services.html">Emergency Service</a></li>                                                                                      
                                         </ul>
                                     </nav>
                                 </div>
@@ -83,7 +84,7 @@
                                             onclick="login()">Login &nbsp;</a></li>
                                     <li id="guidelogin" class='invisible'>
                                         <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                             Guide Login
+                                            Guide Login
                                         </a>
                                     </li>
                                     <li id="liLogout" class='invisible' style='cursor:pointer'>
@@ -122,7 +123,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-9">
-                    <div class="destination_info">
+                    <!-- <div class="destination_info">
                         <h3>Description</h3>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some form, by injected humour, or randomised words which don't look
@@ -147,9 +148,30 @@
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have
                                 suffered alteration in some form, by injected humour, or randomised words.</p>
                         </div>
+                    </div> -->
+                
+    <div class="whole-wrap">
+        <div class="container box_1170">
+            <div class="section-top-border">
+                <h2 class="mb-30">Nearby Hotels</h2>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img data-cfsrc="img/elements/d.jpg" alt class="img-fluid"
+                            style="display:none;visibility:hidden;"><noscript><img src="img/elements/d.jpg" alt
+                                class="img-fluid"></noscript>
                     </div>
+                    <div id="#" class="col-md-9 mt-sm-20">
+                        <h3>Taj Lake Palace</h3>                        
+                    </div>
+                </div>
+                <br>
+                </div>
+            </div>
+        </div>
+    </div>
+
                     <div class="bordered_1px"></div>
-                    <div class="contact_join">
+                    <!-- <div class="contact_join">
                         <h3>Contact for join</h3>
                         <form action="#">
                             <div class="row">
@@ -175,7 +197,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -230,13 +252,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/1.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/1.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="#">
-                                <h3>California</h3>
+                                <h3>Udaipur</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -259,13 +281,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/2.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/2.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="#">
-                                <h3>Korola Megna</h3>
+                                <h3>Delhi</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -288,13 +310,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/3.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/3.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="#">
-                                <h3>London</h3>
+                                <h3>Lonavala</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
