--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
+                                            <li id="emergeId"><a href="emergency_services.html">Emergency Service </a>
+                                            </li>
+                                             
 
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -112,27 +115,23 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
-
-                                    <!-- #### LogIn FormatMenu START #### -->
-                                    <li id="Username" class='invisible'></li>
-                                    <li id="Photo" class='invisible'>
-                                        <img alt="Profile" height="35px" width='35px' id="dpPhoto">
-                                    </li>
-                                    <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login &nbsp;&nbsp;</a>
-                                    </li>
-                                    <li id="guidelogin" class='invisible'>
-                                        <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
-                                            Guide&nbsp;Login &nbsp;
-                                        </a>
-                                    </li>
-                                    <li id="liLogout" class='invisible' style='cursor:pointer'>
-                                        <a id="btnLogout">Logout</a>
-                                    </li>
-                                    <input type="hidden" id="hdnUserType">
-                                    <!-- #### LogIn FormatMenu STOP #### -->
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                        <ul><!-- #### LogIn FormatMenu START #### -->
+                                            <li id="Username" class='invisible'></li>
+                                            <li id="Photo" class='invisible'>
+                                                <img alt="Profile" height="35px" width='35px' id="dpPhoto">
+                                            </li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login &nbsp;&nbsp;</a>
+                                            </li>
+                                            <li id="guidelogin">
+                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
+                                                    Guide &nbsp;Login &nbsp;
+                                                </a>
+                                            </li>
+                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                                <a id="btnLogout">Logout</a>
+                                            </li>
+                                            <input type="hidden" id="hdnUserType">
+                                            <!-- #### LogIn FormatMenu STOP #### -->
                                         </ul>
                                     </div>
                                 </div>
@@ -166,7 +165,9 @@
                                     minlength="10" placeholder='Mobile Number (+91)'></input>
                             </div>
                             <div class="col-sm-12 col-md-2 col-lg-2">
-                                <div id='captchaContainer'></div>
+                                <div id='captchaContainer'>
+
+                                </div>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <button id="btnSendOTP" class='btn btn-primary' type='button'>
